--- a/src/styles.css
+++ b/src/styles.css
@@ -59,13 +59,21 @@ h3 {
   font-weight: bold;
 }
 
+.up-30px {
+  position: relative;
+  top: -30px;
+}
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
 
   .fundo-paulista {
     display: none;
   }
 
+}
+
+@media (max-width: 768px) {
+ 
   h3 {
     font-size: 18px;
   }
