--- a/src/app/acordos-andamento/acordos-andamento.component.css
+++ b/src/app/acordos-andamento/acordos-andamento.component.css
@@ -48,7 +48,7 @@ button {
           }
         
         .btn-accordion {
-            font-size: 16px;
+            font-size: 15px;
         }    
 
         .produto-img {
@@ -83,4 +83,9 @@ button {
             font-weight: bold;
             font-size: large;
         }
+
+        .padd-mobile {
+            padding: 2px;
+        }
+    
     }    
