--- a/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
+++ b/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
@@ -4,7 +4,7 @@
     <img src="assets/img/logo.png" alt="Claro" class="logo">
     <p>Quer negociar com a Claro? <br> Inicie aqui uma consulta sem custo!  </p>
         <div class="form-group"> 
-            <input type="text" [textMask]="mask()" class="form-control col-sm-8" aria-describedby="emailHelp" placeholder="Digite seu CPF ou CNPJ" [(ngModel)]="cpf_cnpj" (input)="cleanAlerts()" (keydown.backspace)="backspacePress($event)" (keydown.enter)="valida()">
+            <input type="text" [textMask]="mask()" class="form-control col-sm-8" aria-describedby="emailHelp" placeholder="Digite seu CPF ou CNPJ" [(ngModel)]="cpf_cnpj" (input)="cleanAlertsAndDisclaimer()" (keydown.backspace)="backspacePress($event)" (keydown.enter)="valida()">
             <button type="submit" class="col-sm-3" (click)="valida()">Verificar</button>            
         <div class="input_error">
             <p *ngIf="cpf_inv">CPF inválido.</p>
@@ -17,6 +17,6 @@
     </div> 
  </div>
 
-    <a class="fixed-bottom auto_inicio" target="_blank" href="http://www.fulltimesolucoes.com.br/">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
+    <a class="fixed-bottom auto_inicio" target="_blank" href="http://www.fulltimesolucoes.com.br/" *ngIf="disclaimer">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
 
 </div>
