--- a/src/app/negocie-online/negocie-online.component.css
+++ b/src/app/negocie-online/negocie-online.component.css
@@ -116,17 +116,17 @@ table {
     }
 
     .opcoes-parcelamento .btn {
-        width: 150px;
-        margin-bottom: 5px;
+        width: 80px;
+        margin-bottom: 2px;
+        padding: 1px;
+        position: relative;
+        left: -20px;
     }
 
-    .wrap-opcao-btn:nth-child(even) {
+/*    .wrap-opcao-btn:nth-child(even) {
         padding-left: 0;
-    }
+    }*/
 
-    .hidden-mobile {
-        display: none;
-    }
 }
 
 .loader-wrap-wrap {
