--- a/src/app/prazo-finalizacao/prazo-finalizacao.component.html
+++ b/src/app/prazo-finalizacao/prazo-finalizacao.component.html
@@ -31,7 +31,7 @@
   <div class="row">
       <div class="col-6 col-sm-4">
         <button type="button" class="btn btn-primary" (click)="pegarEmail()">
-          Por e-mail
+          Por e-mmail
         </button>
       </div>
       <div class="col-6 col-sm-4">
@@ -61,7 +61,7 @@
   <div class="row">
     <div class="col-sm-4">
       <button type="button" class="btn btn-yellow" (click)="sucesso = true; this.fim = false;"> <!-- gravaAcordo() -->
-        Confirmarr acordo
+        Confirmar acordo
       </button>
     </div>
     <div class="col-6 col-sm-4">
