--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -76,7 +76,7 @@
             </a>
         </div>
      </div>    
-        <a class="bottom-fixed back-beje-mobile" target="_blank" href="http://www.fulltimesolucoes.com.br/" *ngIf="apiRestService.showDisclaimer" [class.mobile-hidden]="showOpcoes">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
+        <a class="bottom-fixed back-beje-mobile" target="_blank" href="http://www.fulltimesolucoes.com.br/" *ngIf="apiRestService.showDisclaimer" [class.mobile-hidden]="showOpcoes || showAcordosAndamento">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
                 
     </div>    
 
