--- a/src/app/input-email/input-email.component.css
+++ b/src/app/input-email/input-email.component.css
@@ -1,6 +1,10 @@
+.form-control {
+    margin-bottom: 10px;
+}
+
 .email-box {
-    margin: 50px auto;
-    width: 75%;
+    margin: 25px auto;
+    width: 45%;
 }
 
 .email-box p {
