--- a/src/app/input-email/input-email.component.html
+++ b/src/app/input-email/input-email.component.html
@@ -1,7 +1,8 @@
 <div class="form-group email-box">
         
-       <input type="email" class="form-control col-sm-8" aria-describedby="emailHelp" placeholder="E-mail" [(ngModel)]="email" (input)="cleanAlerts()"> 
+       <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="E-mail" [(ngModel)]="email" (input)="cleanAlerts()"> 
        <button type="submit" class="col-sm-3" (click)="envia()">Enviar</button>
+       <button class="col-sm-3 float-right" (click)="voltar()">Voltar</button>
        <div class="input_error">
            <p *ngIf="email_inv">E-mail inválido.</p>
            <p *ngIf="verificando">Aguarde . . .</p>
